# GLoIP

./: .gitignore  GLoIP-protocol.txt  README.md  build_client.py  build_server.py  client_generator.py  create_meta_template.py  generator_common.py  server_generator.py
client/: CMakeLists.txt  IOHandler.cpp  IOHandler.h  TcpIOHandler.cpp  TcpIOHandler.h  client_helpers.cpp  client_helpers.h  gloip_client.cpp  gloip_client.h
protocols/gl32/: gl32_server_custom.cpp
protocols/test/: test.h  test_client_custom.cpp  test_server_custom.cpp
server/: CMakeLists.txt  Socket.h  TcpServer.cpp  TcpServer.h  TcpSocket.cpp  TcpSocket.h  gloip_server.cpp  gloip_server.h
